Basic libcurl & json-c usage

--- a/meson.build
+++ b/meson.build
@@ -2,6 +2,8 @@ project('chord', 'c')
 
 deps = [
   dependency('notcurses-core'),
+  dependency('libcurl'),
+  dependency('json-c')
 ]
 
 executable('chord', 'src/main.c',
