--- a/meson.build
+++ b/meson.build
@@ -9,6 +9,7 @@ deps = [
 ]
 
 executable('chord',
-  'src/main.c', 'src/ui/userlist.c',
+  'src/main.c',
+  'src/ui/util.c', 'src/ui/userlist.c', 'src/ui/messages.c',
   dependencies: deps,
   include_directories: include)
