--- a/meson.build
+++ b/meson.build
@@ -5,11 +5,13 @@ include = include_directories('include')
 deps = [
   dependency('notcurses-core'),
   dependency('libcurl'),
-  dependency('json-c')
+  dependency('jansson')
 ]
 
 executable('chord',
   'src/main.c',
+  'src/api/user.c',
+  'src/structures/user.c',
   'src/ui/util.c', 'src/ui/userlist.c', 'src/ui/messages.c',
   dependencies: deps,
   include_directories: include)
