Added profile component

--- a/meson.build
+++ b/meson.build
@@ -12,6 +12,6 @@ executable('chord',
   'src/main.c',
   'src/api/user.c',
   'src/structures/user.c',
-  'src/ui/util.c', 'src/ui/userlist.c', 'src/ui/messages.c',
+  'src/ui/util.c', 'src/ui/userlist.c', 'src/ui/messages.c', 'src/ui/profile.c',
   dependencies: deps,
   include_directories: include)
