API implementation/refactoring

--- a/meson.build
+++ b/meson.build
@@ -10,7 +10,7 @@ deps = [
 
 executable('chord',
   'src/main.c',
-  'src/api/user.c',
+  'src/api/api.c', 'src/api/user.c',
   'src/structures/user.c',
   'src/ui/util.c', 'src/ui/userlist.c', 'src/ui/messages.c', 'src/ui/profile.c',
   dependencies: deps,
